# cgap-pipeline-main

./: .env  .gitmodules  Makefile  README.md  buildspec.yml  pyproject.toml
.github/workflows/: main.yml
base_images/: README.md
base_images/ubuntu-py-generic/: Dockerfile
base_images/ubuntu2104-py-generic/: Dockerfile
docs/: CGAP_docs_style_guide.rst  Downstream pipelines.rst  Downstream_pipelines.rst  News.rst  Other pipelines.rst  Other_pipelines.rst  Pipeline_base.rst  Upstream pipelines.rst  Upstream_pipelines.rst  conf.py  index.rst  news-SNV_germline.rst  news-SV_germline.rst  news-base.rst  news-main.rst  news-master.rst  news-upstream_GATK.rst  news-upstream_sentieon.rst  overview-SNV_germline.rst  overview-base.rst  overview-main.rst  overview-upstream_GATK.rst  qc-SNV_germline.rst  requirements.txt  steps-upstream_GATK.rst
metaworkflows/: CGAP_WGS_proband_only.json  CGAP_WGS_proband_only_cram.json  WES_upstream_sentieon_proband.json  WGS_upstream_sentieon_proband.json  joint_calling_gvcf_sentieon_plus_annot.json
metaworkflows/legacy/: CGAP_WES_family.json  CGAP_WES_proband_only.json  CGAP_WES_trio.json  CGAP_WGS_family.json  CGAP_WGS_proband_only.json  CGAP_WGS_proband_only_60x.json  CGAP_WGS_proband_only_cram.json  CGAP_WGS_proband_only_cram_60x.json  CGAP_WGS_trio.json  CGAP_WGS_trio_60x.json  CGAP_WGS_trio_cram.json  CGAP_WGS_trio_cram_60x.json
portal_objects/metaworkflows/: CGAP_WES_proband_only.json  CGAP_WGS_family.json  CGAP_WGS_trio.json  SV_germline_hg19.json  SV_germline_hg19_vcf.json  SV_germline_hg19_vcf.yaml  (+13 more)
scripts/: check_awscred.sh
(+83 files in other folders)
