[tool.poetry]
name = "cgap-pipeline-main"
version = "0.0.2"
description = "Main repository for deploying pipelines that impelement the CGAP-pipeline specification."
authors = ["CGAP Team"]

[tool.poetry.dependencies]

python = ">=3.6.10,<3.7"
dcicutils = "^3.1.0"
magma-suite = "^0.2.1"
boto3 = "^1.20.15"
awscli = "^1.22.15"

cgap-pipeline-utils = { path = "./cgap-pipeline-utils", develop = true }

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
